--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build.ui": "rm -rf build && cd ../notes && npm run build && cp -r build ../nodeHarjoittelua",
+    "deploy:full": "npm run build:ui && git add . & git commit -m uibuild && git push"
   },
   "author": "Antti Astikainen",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   },
