--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build.ui": "rm -rf build && cd ../notes && npm run build && cp -r build ../nodeHarjoittelua",
-    "deploy:full": "npm run build:ui && git add . & git commit -m uibuild && git push"
+    "deploy:full": "npm run build:ui && git add . & git commit -m uibuild && git push",
+    "lint": "eslint ."
   },
   "author": "Antti Astikainen",
   "license": "MIT",
@@ -19,6 +20,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.45.0",
     "nodemon": "^2.0.22"
   }
 }
