--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build.ui": "rm -rf build && cd ../notes && npm run build && cp -r build ../nodeHarjoittelua",
     "deploy:full": "npm run build:ui && git add . & git commit -m uibuild && git push",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "author": "Antti Astikainen",
   "license": "MIT",
@@ -21,6 +21,10 @@
   },
   "devDependencies": {
     "eslint": "^8.45.0",
+    "jest": "^29.6.1",
     "nodemon": "^2.0.22"
+  },
+  "jest": {
+      "testEnvironment": "node"
   }
 }
