--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "\"\"",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "build.ui": "rm -rf build && cd ../notes && npm run build && cp -r build ../nodeHarjoittelua",
     "deploy:full": "npm run build:ui && git add . & git commit -m uibuild && git push",
     "lint": "eslint .",
-    "test": "jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Antti Astikainen",
   "license": "MIT",
@@ -20,11 +21,14 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.45.0",
     "jest": "^29.6.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   },
   "jest": {
-      "testEnvironment": "node"
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js"
   }
 }
